# tagger

./: AGENTS.md  verify_settings.py
.github/workflows/: build.yml
browser-extension/: background.js  manifest.json
browser-extension/host/: com.omnitagger.host.json
omni-tagger/: .prettierignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts
omni-tagger/docs/: LINUX_SETUP.md  SPECIFICATION.md  TODO.md
omni-tagger/e2e/: app.spec.ts
omni-tagger/scripts/: build-native-host.mjs  verify_native_host.py
omni-tagger/src/: App.css  App.tsx
omni-tagger/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
omni-tagger/src-tauri/capabilities/: default.json
omni-tagger/src-tauri/models/: README.md
omni-tagger/src-tauri/src/: config.rs  lib.rs  main.rs  model_manager.rs  processor.rs  registry.rs  state.rs  tagger.rs
omni-tagger/src/components/: Overlay.tsx  Settings.tsx
