[package]
name = "omni-tagger"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omni_tagger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = "0.25.9"
base64 = "0.22.1"
arboard = "3.6.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2.4.0"
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
ndarray = "0.17.2"
csv = "1.4.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
futures-util = "0.3.32"
byteorder = "1.5.0"
anyhow = "1.0.95"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
